# dashi-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  dev.Dockerfile  dev.compose.yaml  dev.sh  flake.nix  init.sh  prod.Dockerfile  prod.compose.yaml  prod.sh  server.Dockerfile
.direnv/: flake-profile-1-link
crates/application/: Cargo.toml
crates/application/src/: generate.rs  item.rs  lib.rs  rental.rs  shared_state.rs
crates/application/src/item/: register.rs
crates/application/src/usecase/: generate.rs  item.rs
crates/application/src/usecase/item/: delete.rs  individual.rs  update.rs
crates/application/src/utils/: healthcheck.rs
crates/domain/: Cargo.toml
crates/domain/src/: entity.rs  repository.rs  value_object.rs
crates/domain/src/entity/: data_type.rs  endpoint.rs
crates/domain/src/entity/data_type/: depreiation_csv.rs  generate_data_request.rs  individual_item.rs  item_csv.rs  meilisearch.rs  move_item.rs  register_item.rs  rent_item.rs  search_item.rs  transfer_item.rs  transfer_item_result.rs  trash_item.rs  update_item.rs
crates/domain/src/entity/endpoint/: csv.rs  generate.rs  item.rs  rental.rs  utils.rs
crates/domain/src/entity/endpoint/csv/: depreiation.rs  item.rs
crates/domain/src/entity/endpoint/generate/: barcode.rs  qr.rs
crates/domain/src/entity/endpoint/item/: cable.rs  connector.rs  delete.rs  individual.rs  register.rs  search.rs  update.rs
crates/domain/src/entity/endpoint/rental/: render.rs  rent.rs
crates/domain/src/entity/endpoint/utils/: healthcheck.rs  login.rs
crates/domain/src/repository/: connection.rs  generate.rs  healthcheck.rs  item.rs
crates/domain/src/repository/item/: delete.rs  register.rs  update.rs
crates/domain/src/value_object/: error.rs  shared_state.rs
crates/domain/src/value_object/error/: connection.rs  critical_incident.rs  delete_item.rs  generate.rs  healthcheck.rs  individual_item.rs  register_item.rs  search_item.rs  transfer_item.rs  update_item.rs
crates/domain/src/value_object/error/csv/: depreiation.rs
crates/domain/src/value_object/error/item/: register.rs  transfer.rs  update.rs
crates/healthcheck/: Cargo.toml
crates/healthcheck/src/: init.rs  main.rs  migration.rs
crates/infractructure/: Cargo.toml
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: connection.rs  generate.rs  healthcheck.rs  item.rs  lib.rs  shared_state.rs
crates/infrastructure/src/connection/: graphdb.rs  meilisearch.rs  object_strage.rs  rdb.rs
crates/infrastructure/src/csv/: depreiation.rs  item.rs
crates/infrastructure/src/generate/: barcode.rs  generate_module.rs
crates/infrastructure/src/healthcheck/: graphdb.rs  meilisearch.rs  rdb.rs
crates/infrastructure/src/item/: cable.rs  connector.rs  delete.rs  individual_item.rs  read.rs  register.rs  search.rs  transfer.rs
crates/infrastructure/src/item/delete/: delete_module.rs
crates/infrastructure/src/item/individual_item/: individual_item_module.rs
crates/infrastructure/src/item/read/: cable.rs  connector.rs  each_item.rs
crates/infrastructure/src/item/register/: register_module.rs
crates/infrastructure/src/item/search/: search_module.rs
crates/infrastructure/src/item/transfer/: transfer_module.rs
crates/infrastructure/src/item/update/: update_module.rs
crates/infrastructure/src/utils/: healthcheck.rs
crates/init/: Cargo.toml
crates/init/src/: main.rs
crates/ping/: Cargo.toml
crates/ping/src/: main.rs
crates/presentation/: Cargo.toml
crates/presentation/src/: api.rs  handler.rs  handlers.rs  main.rs  models.rs  route.rs  routes.rs
crates/presentation/src/error/: api.rs
crates/presentation/src/handler/: csv.rs  generate.rs  item.rs  rent.rs  rental.rs  utils.rs
crates/presentation/src/handlers/: csv.rs  generate.rs  item.rs  joke.rs  rental.rs  utils.rs
crates/presentation/src/route/: csv.rs  generate.rs  item.rs  rent.rs  rental.rs  root.rs  utils.rs
crates/presentation/src/routes/: generate.rs  item.rs  rental.rs  root.rs  utils.rs
crates/presentation/src/use_case_wrapper/: generate.rs  item.rs
entity/: Cargo.toml
entity/src/: item.rs  label.rs  mod.rs  prelude.rs  rent.rs  rental.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_item_table.rs  m20220101_000001_label_table.rs  m20220101_000001_rent_table.rs  m20220101_000001_rental_table.rs
src/application/: Cargo.toml
src/infractructure/: Cargo.toml
