[workspace]
members = [
    "crates/presentation",
    "crates/application",
    "crates/domain",
    "crates/infrastructure",
]

[workspace.package]
name = "dashi-server"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.39.2", features = ["full"] }
#axum
axum = {version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
#seaorm
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
migration = { path = "migration" }
entity = { path = "entity" }
