#* migration and create entity *#
# [package]
# name = "dashi-server"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# #SeaORM
# migration = { path = "migration" }
# sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }

#* main *#
[workspace]
members = [
    "crates/init",
    "crates/presentation",
    "crates/application",
    "crates/domain",
    "crates/infrastructure",
]

[workspace.package]
name = "dashi-server"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
#Web API
tokio = { version = "1.39.2", features = ["full"] }
axum = {version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
#.env
dotenvy = "0.15.7"
once_cell = "1.19.0"
#SeaORM
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
chrono = "0.4.38"
serde_json = "1.0.127"
#cloudflare
cloudflare-r2-rs = "0.6.8"
#Meilisearch
meilisearch-sdk = "0.27.1"
serde = { version="1.0.209", features=["derive"] }
#Neo4j
neo4rs = "0.8.0"
