#* create entity *#
# [package]
# name = "dashi-server"
# version = "0.1.0"
# edition = "2024"

# [dependencies]
# #sea-orm
# migration = { path = "migration" }
# sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }

#* main and migration *#
[workspace]
members = [
    "crates/init",
    "crates/presentation",
    "crates/application",
    "crates/domain",
    "crates/infrastructure",
]

[workspace.package]
name = "dashi-server"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
#axum
tokio = { version = "1.39.2", features = ["full"] }
axum = {version = "0.7.5", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
utoipa = { version = "4.2.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
#.env
dotenvy = "0.15.7"
once_cell = "1.19.0"
#sea-orm
entity = { path = "entity" }
migration = { path = "migration" }
sea-orm = { version = "1.0.0", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
chrono = "0.4.38"
serde_json = "1.0.127"
#meilisearch
meilisearch-sdk = "0.27.1"
serde = { version="1.0.209", features=["derive"] }
#neo4j
neo4rs = "0.8.0"
#cloudflare r2
cf-r2-sdk = "0.1.19"
