[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
# DDD
domain = { path = "../domain" }
# axum
axum.workspace = true
# .env
dotenvy = "0.15.7"
once_cell = "1.19.0"
# sea-orm
entity.workspace = true
migration.workspace = true
sea-orm.workspace = true
chrono.workspace = true
# meilisearch
meilisearch-sdk.workspace = true
# neo4j
neo4rs.workspace = true
#cloudflare r2
cf-r2-sdk.workspace = true
# other
serde_json.workspace = true