[package]
name = "presentation"
version.workspace = true
edition.workspace = true

[dependencies]
# DDD
domain = { path = "../domain" }
# DIを使うためにinfrastructureに依存している
infrastructure = { path = "../infrastructure" }
# axum
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
# sea-orm
sea-orm.workspace = true
# meilisearch
meilisearch-sdk.workspace = true
# neo4j
neo4rs.workspace = true